// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#FreeCardPlan should render 1`] = `
<CardPlan
  startingPrice={0}
  title="billing.free_plan.title"
>
  <div
    className="spacer-left"
  >
    <ul
      className="big-spacer-left note"
    >
      <li
        className="little-spacer-bottom"
      >
        billing.free_plan.all_projects_analyzed_public
      </li>
      <li>
        billing.free_plan.anyone_can_browse_source_code
      </li>
    </ul>
  </div>
</CardPlan>
`;

exports[`#FreeCardPlan should render disabled with info 1`] = `
<CardPlan
  disabled={true}
  startingPrice={0}
  title="billing.free_plan.title"
>
  <div
    className="spacer-left"
  >
    <ul
      className="big-spacer-left note"
    >
      <li
        className="little-spacer-bottom"
      >
        billing.free_plan.all_projects_analyzed_public
      </li>
      <li>
        billing.free_plan.anyone_can_browse_source_code
      </li>
    </ul>
  </div>
  <Alert
    variant="info"
  >
    <FormattedMessage
      defaultMessage="billing.free_plan.not_available_info"
      id="billing.free_plan.not_available_info"
      values={
        Object {
          "alm": "GitHub",
        }
      }
    />
  </Alert>
</CardPlan>
`;

exports[`#FreeCardPlan should render with warning 1`] = `
<CardPlan
  selected={true}
  startingPrice={0}
  title="billing.free_plan.title"
>
  <div
    className="spacer-left"
  >
    <ul
      className="big-spacer-left note"
    >
      <li
        className="little-spacer-bottom"
      >
        billing.free_plan.all_projects_analyzed_public
      </li>
      <li>
        billing.free_plan.anyone_can_browse_source_code
      </li>
    </ul>
  </div>
  <Alert
    variant="warning"
  >
    <FormattedMessage
      defaultMessage="billing.free_plan.private_repo_warning"
      id="billing.free_plan.private_repo_warning"
      values={
        Object {
          "alm": "GitHub",
        }
      }
    />
  </Alert>
</CardPlan>
`;

exports[`#PaidCardPlan should render 1`] = `
<CardPlan
  recommended="billing.paid_plan.recommended"
  startingPrice={10}
  title="billing.paid_plan.title"
>
  <UpgradeOrganizationAdvantages />
  <div
    className="big-spacer-left"
  >
    <Link
      className="spacer-left"
      onlyActiveOnIndex={false}
      style={Object {}}
      target="_blank"
      to="/about/pricing"
    >
      billing.pricing.learn_more
    </Link>
  </div>
</CardPlan>
`;

exports[`should be actionable 1`] = `
<div
  className="card-plan card-plan-actionable"
  onClick={[MockFunction]}
  role="radio"
  tabIndex={0}
>
  <h2
    className="card-plan-header big-spacer-bottom"
  >
    <span
      className="display-flex-center"
    >
      <i
        className="icon-radio spacer-right"
      />
      Free Plan
    </span>
  </h2>
  <div
    className="card-plan-body"
  >
    <div>
      content
    </div>
  </div>
</div>
`;

exports[`should be actionable 2`] = `
<div
  aria-checked={true}
  className="card-plan card-plan-actionable selected"
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "currentTarget": Object {
              "blur": [Function],
            },
            "preventDefault": [Function],
            "stopPropagation": [Function],
            "target": Object {
              "blur": [Function],
            },
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  role="radio"
  tabIndex={0}
>
  <h2
    className="card-plan-header big-spacer-bottom"
  >
    <span
      className="display-flex-center"
    >
      <i
        className="icon-radio spacer-right is-checked"
      />
      Free Plan
    </span>
    <span
      className="card-plan-price"
    >
      billing.price_format.0
    </span>
  </h2>
  <div
    className="card-plan-body"
  >
    <div>
      content
    </div>
  </div>
</div>
`;

exports[`should render correctly 1`] = `
<div
  className="card-plan"
  role="radio"
  tabIndex={0}
>
  <h2
    className="card-plan-header big-spacer-bottom"
  >
    <span
      className="display-flex-center"
    >
      Paid Plan
    </span>
    <FormattedMessage
      defaultMessage="billing.price_from_x"
      id="billing.price_from_x"
      values={
        Object {
          "price": <span
            className="card-plan-price"
          >
            billing.price_format.10
          </span>,
        }
      }
    />
  </h2>
  <div
    className="card-plan-body"
  >
    <div>
      content
    </div>
  </div>
  <div
    className="card-plan-recommended"
  >
    <RecommendedIcon
      className="spacer-right"
    />
    <FormattedMessage
      defaultMessage="Recommended for you"
      id="Recommended for you"
      values={
        Object {
          "recommended": <strong>
            recommended
          </strong>,
        }
      }
    />
  </div>
</div>
`;
